--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.js",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "postinstall": "ng build --aot -prod"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,17 @@
     "express": "^4.16.3",
     "mongoose": "^5.2.0",
     "morgan": "^1.9.0",
-    "nodemon": "^1.17.5"
+    "nodemon": "^1.17.5",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "@angular/cli": "^6.1.2",
+    "@angular/compiler-cli": "^6.1.1",
+    "enhanced-resolve": "^3.3.0",
+    "typescript": "3.0.1"
+  },
+  "engines": {
+    "node": "8.11.2",
+    "npm": "5.6.0"
   }
 }
