updates to deploy to heroku2

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/app.js",
-    "start": "node src/app.js",
-    "postinstall": "ng build --aot -prod"
+    "start": "node src/app.js"
+    
   },
   "keywords": [],
   "author": "",
